crates/ruff_python_parser/tests/snapshots/valid_syntax@debug_rename_import.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..86,
        body: [
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 0..25,
                    names: [
                        Alias {
                            range: 7..25,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("__debug__"),
                                range: 7..16,
                                node_index: NodeIndex(None),
                            },
                            asname: Some(
                                Identifier {
                                    id: Name("debug"),
                                    range: 20..25,
                                    node_index: NodeIndex(None),
                                },
                            ),
                        },
                    ],
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 26..52,
                    module: Some(
                        Identifier {
                            id: Name("__debug__"),
                            range: 31..40,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 48..52,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("Some"),
                                range: 48..52,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    runtime_level: None,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 53..85,
                    module: Some(
                        Identifier {
                            id: Name("x"),
                            range: 58..59,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 67..85,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("__debug__"),
                                range: 67..76,
                                node_index: NodeIndex(None),
                            },
                            asname: Some(
                                Identifier {
                                    id: Name("debug"),
                                    range: 80..85,
                                    node_index: NodeIndex(None),
                                },
                            ),
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    runtime_level: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
